fix: tag grid spacing

--- a/fm/bleh.user.css
+++ b/fm/bleh.user.css
@@ -6641,7 +6641,7 @@ span.header-new-gallery-inner a:before,
 on the bottom of a panel !! */
 /* 2024.0710.refresh - all track panels have a button now */ #recent-tracks-section > h2,
 #top-tracks > h2,
-:is(.grid-items-section /* other profiles */, .section-with-settings /* your profile */, .section-controls) > :is(h2, h3) {
+:is(.section-controls) > :is(h2, h3) {
     height: 32px;
     width: fit-content;
 }
